--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,8 +43,7 @@
 
     <filter-mapping>
         <filter-name>TestFilter2</filter-name>
-        <url-pattern>/servlet1</url-pattern>
-        <url-pattern>/servlet2</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <listener>
